add jwt authentication to swagger api
